--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
 	"author": "Jack Collins",
 	"license": "ISC",
 	"dependencies": {
+		"@aws-sdk/client-ses": "^3.226.0",
+		"@aws-sdk/credential-provider-node": "^3.226.0",
 		"axios": "^0.27.2",
 		"cors": "^2.8.5",
 		"dotenv": "^16.0.1",
 		"express": "^4.18.1",
+		"nodemailer": "^6.8.0",
 		"nodemon": "^2.0.16"
 	}
 }
